<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kurzy</string>
    <string name="action_settings">Settings</string>
    <string name="btn_forward">&gt;&gt;&gt;&gt;</string>
    <string name="btn_backward">&lt;&lt;&lt;&lt;</string>
    <string name="onRightClick">onRightClick</string>
    <string name="onLeftClick">onLeftClick</string>
    <string name="volumeDefault">1</string>

</resources>
